# shitty

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  BufferMessageHandler.h  CMakeLists.txt  ClientTransport.h  ClientTransportSource.cpp  ClientTransportSource.h  Connection.cpp  Connection.h  CountingResponder.cpp  CountingResponder.h  CountingServer.cpp  Date.cpp  Error.cpp  Error.h  EventReceiver.cpp  EventReceiver.h  HTTP1Transport.cpp  HTTP1Transport.h  HTTPDate.cpp  HTTPDate.h  Handler.h  Headers.cpp  Headers.h  HelloWorld.cpp  LICENSE  Makefile  Message.cpp  Message.h  MessageHandler.h  Payload-inl.h  Payload.h  PerRequestHandler.h  PerRequestServer.cpp  PrintRequestServer.cpp  ProxyHandler.cpp  ProxyHandler.h  (+68 more)
benchmarks/: ArrayStatusStrings.cpp  ArrayStatusStrings.h  Makefile  status-code.cpp
dependencies/hpack/: Makefile  header.cpp  header.h  number.h
dependencies/hpack/huffy/: CMakeLists.txt  Makefile  bitbuf.h  decode.c  decode.h  encode.c  encode.h  make-etable.sh
examples/: Makefile  server.cpp
hpack/: Makefile  header.cpp  header.h  number.c  number.h  test.c
hpack/huffy/: .gitignore  Makefile  bitbuf.c  bitbuf.h  decode-test.c  decode.c  decode.h  encode-table.c  encode-test.c  encode.c  encode.h  huffcodes.txt  make-etable.sh  random-test.c  suck.c
http1/: CMakeLists.txt  ClientTransport.cpp  ClientTransport.h  ClientTransportSource.cpp  ClientTransportSource.h  HTTP1.cpp  HTTP1.h  HTTP2Upgrader.cpp  HTTP2Upgrader.h  ServerTransport.cpp  ServerTransport.h  TestHTTP1Upgrader.cpp  TestHTTP1Upgrader.h  Transport.cpp  Transport.h  Upgrader.h
http2/: CMakeLists.txt  DataFrame.h  FlowControl.h  Frame.cpp  Frame.h  HeadersFrame.h  Protocol.h  ServerStream.cpp  ServerStream.h  ServerTransport.cpp  ServerTransport.h  Settings.h
old/: connection.h
src/: BufferMessageHandler.cpp  CMakeLists.txt  ClientStream.h  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Date.h  EventReceiver.cpp  HelloWorld.cpp  Message.cpp  MessageHandler.cpp  Payload-inl.h  ProxyHandler.cpp  ProxyServer.cpp  Request.cpp  Request.h  RequestHandler.cpp  Response.cpp  Response.h  Route-inl.h  Route.cpp  Route.h  Server.h  ServerStream.h  SignalReceiver.cpp  SignalReceiver.h  SignalSource.h  StaticResponder.cpp  Stream.cpp  Stream.h  StreamBuf.cpp  StreamBuf.h  SwitchTransport.cpp  Transport.h  UnhandledRequestHandler.cpp  settings.h
src/benchmarks/: .gitignore
src/dependencies/hpack/: CMakeLists.txt  Makefile  error.h  header.cpp  header.h  number.c  number.h
src/dependencies/hpack/huffy/: CMakeLists.txt  bitbuf-test.c  bitbuf.c  encode-table.h  encode.h  random-test.c
src/http1/: ClientTransport.cpp  ClientTransport.h  HTTP1.h  HTTP2Upgrader.cpp  HTTP2Upgrader.h  IncomingMessage.h  ServerTransport.cpp  Transport.h  UpgradeRegistry.cpp  UpgradeRegistry.h  Upgrader.h
src/http2/: FlowControl.h  HeadersFrame.h  Settings.cpp
